combined sidebar classes

--- a/index.html
+++ b/index.html
@@ -243,6 +243,12 @@ footer{
 }
 .sidebar{
     height: 100%;
+    max-width: 285px;
+    display:flex;
+    flex-direction: column;
+    align-items: stretch;
+    background-color: rgb(230, 230, 230);
+    padding-top: 5vh;
 }
 body{
     margin:0;
@@ -262,13 +268,7 @@ body{
     overflow: auto;
     overflow-y: auto;
 }
-.sidebar{
-    display:flex;
-    flex-direction: column;
-    align-items: stretch;
-    background-color: rgb(230, 230, 230);
-    padding-top: 5vh;
-}
+
 .nav-item{
     text-align: center;
     border-style:solid;
