changed sidebar to always be 285px wide

--- a/index.html
+++ b/index.html
@@ -243,7 +243,6 @@ footer{
 }
 .sidebar{
     height: 100%;
-    max-width: 285px;
     display:flex;
     flex-direction: column;
     align-items: stretch;
@@ -259,7 +258,7 @@ body{
     height:80vh;
     margin: 10vh 8px 10vh 0px;
     display:grid;
-    grid-template-columns: 30vw auto;
+    grid-template-columns: 285px auto;
     grid-template-rows: 100%;
     column-gap: 8px;
 
