--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
                 </h1>
             <nav>
                 
-                <div id="intro-button" class="nav-item" onclick="openPage('intro')">
-                    <h5>Intro</h5>
+                <div id="intro-button" class="sidebar-item" onclick="openPage('intro')">
+                    <img src="images/user-solid.svg" alt="user icon" class="sidebar-item-icon"\><h4 class="sidebar-item-text"> Intro</h4>
                 </div>
-                <div id="bg-checks-button" class="nav-item">
-                    <h5>Background Checks</h5>
+                <div id="bg-checks-button" class="sidebar-item">
+                    <img src="images/fingerprint-solid.svg" alt="user icon" class="sidebar-item-icon"\><h4 class="sidebar-item-text"> Background Checks</h4>
                 </div>
-                <div id="court-docs-button" class="nav-item">
-                    <h5>Court Documents</h5>
+                <div id="court-docs-button" class="sidebar-item">
+                    <img src="images/gavel-solid.svg" alt="user icon" class="sidebar-item-icon"\><h4 class="sidebar-item-text"> Court Documents</h4>
                 </div>
-                <div id="id-docs-button" class="nav-item">
-                    <h5>ID Documents</h5>
+                <div id="id-docs-button" class="sidebar-item">
+                    <img src="images/id-card-solid.svg" alt="user icon" class="sidebar-item-icon"\><h4 class="sidebar-item-text"> ID Documents</h4>
                 </div>
             </nav>
         </div>
