--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
 <head>
     <title>NC Name Change Packet</title>
-    <link rel="icon" type="image/x-icon" href="./files/images/favicon.ico">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
     <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
     <script type="text/javascript" src="js/buttons.js"></script>  
