tweak to improve visuals on safari

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <div id="wrapper">
+    <div id="body-wrapper">
         <header class="trans-border"></header>
 
         <div class = "main-div">
@@ -38,8 +38,9 @@
                 </nav>
             </div>
             
-            
-            <section id="main-content" class="content"></section>
+            <div id="content-wrapper">
+                <section id="main-content" class="content"></section>
+            </div>
             <div id="sidebar-tab" class="sidebar-tab">
                 <img src="images/angle-right-solid.svg" alt="arrow right icon" class="sidebar-tab-icon"\>
                 <div id="sidebar-tab" class="sidebar-tab-shadow"></div>
