--- a/pages/CourtDocuments.html
+++ b/pages/CourtDocuments.html
@@ -12,14 +12,14 @@
 </p>
 <br>
 
-<h4><a href="./files/CourtDocuments/sp606-NoticeOfIntentToChangeName.pdf" target="_blank" rel="noopener noreferrer">
+<h4><a href="https://www.nccourts.gov/assets/documents/forms/sp606.pdf?VersionId=Ido61h0UNKfQxXoTSB2_BEGy7prKcm9c" target="_blank" rel="noopener noreferrer">
     Notice of Intent to Change Name
 </a></h4>
 <p>
     You will need to post this at courthouse at least 10 days before you submit your name change.
 </p>
 
-<h4><a href="./files/CourtDocuments/sp607-AffidavitOfGoodCharacter.pdf" target="_blank" rel="noopener noreferrer">
+<h4><a href="https://www.nccourts.gov/assets/documents/forms/sp607.pdf?VersionId=yX3uPm253usQheBICFyrmKcvdWWNJNA." target="_blank" rel="noopener noreferrer">
     Affidavit of Good Character</a> (x2)</h4>
 <p>
     You will need two people (preferably not blood relatives) from your country to fill this out,
@@ -28,7 +28,7 @@
     As you have not yet changed your name yet, they should use your deadname when talking about you for this form. 
 </p>
 
-<h4><a href="./files/CourtDocuments/sp604-ApplicationForAdultNameChange.pdf" target="_blank" rel="noopener noreferrer">
+<h4><a href="https://www.nccourts.gov/assets/documents/forms/sp604.pdf?VersionId=GiLgvh_WFWxdYqbAUf4v.RPaeIcB24RT" target="_blank" rel="noopener noreferrer">
     Application For Adult Name Change
 </a></h4>
 <p>
