--- a/pages/IDDocuments.html
+++ b/pages/IDDocuments.html
@@ -6,7 +6,7 @@
 </p>
 <br>
 
-<h4><a href="./files/IDDocuments/ss-5.pdf" target="_blank" rel="noopener noreferrer">
+<h4><a href="https://www.ssa.gov/forms/ss-5.pdf" target="_blank" rel="noopener noreferrer">
     Social Security Card</a></h4>
 <p>
     This was one of the easier documents to update. You can find your
@@ -30,7 +30,7 @@
     You will want to make an appointment ASAP <a href="https://skiptheline.ncdot.gov/Webapp/Appointment/Index/a7ade79b-996d-4971-8766-97feb75254de" target="_blank" rel="noopener noreferrer">
         here</a>. For the name change, you will need to bring your court order
         proving you name change. For your sex marker change, you need to bring an updated passport with the correct information on it
-            (OR <a href="./files/IDDocuments/DL-300.pdf" target="_blank" rel="noopener noreferrer">this form</a> filled out, but the updated passport is much easier).
+            (OR <a href="https://www.ncdot.gov/dmv/downloads/Documents/DL-300.pdf" target="_blank" rel="noopener noreferrer">this form</a> filled out, but the updated passport is much easier).
     </a>
 </p>
 
@@ -39,7 +39,7 @@
     You can do this while you are updating your driver's license.
 </p>
 
-<h4><a href="./files/IDDocuments/NCOVR-BirthModificationsApplicationFinal-07072022v6.pdf" target="_blank" rel="noopener noreferrer">
+<h4><a href="https://vitalrecords.nc.gov/documents/NCOVR-BirthModificationsApplicationFinal-07072022v6.pdf" target="_blank" rel="noopener noreferrer">
     Birth Certificate</a></h4>
 <p>
     <b>WIP<br></b>
