Minor text edits

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <nav>
                     
                     <div id="intro-button" class="sidebar-item">
-                        <img src="images/user-solid.svg" alt="user icon" class="sidebar-item-icon"\><h4 class="sidebar-item-text"> Intro</h4>
+                        <img src="images/user-solid.svg" alt="user icon" class="sidebar-item-icon"\><h4 class="sidebar-item-text"> Welcome</h4>
                     </div>
                     <div id="bg-checks-button" class="sidebar-item">
                         <img src="images/fingerprint-solid.svg" alt="fingerprint icon" class="sidebar-item-icon"\><h4 class="sidebar-item-text"> Background Checks</h4>
