--- a/pages/CourtDocuments.html
+++ b/pages/CourtDocuments.html
@@ -2,7 +2,7 @@
     Court Documents
 </h2>
 <p>
-    Now that you have your background checks' results, you can actually legally change your name. 
+    Now that you have your background checks' results, you can actually go about changing your name. 
     These are the documents that you will actually file with the court.
     You can find your courthouse <a href="https://www.nccourts.gov/locations" target="_blank" rel="noopener noreferrer">
         here</a> on the <a href="https://www.nccourts.gov/" target="_blank" rel="noopener noreferrer">
@@ -16,7 +16,9 @@
     Notice of Intent to Change Name
 </a></h4>
 <p>
-    You will need to post this at courthouse at least 10 days before you submit your name change.
+    You will need to post this at courthouse at least 10 days before you submit your name change. 
+    Once there, they will give you directions for where to actually post it. You will need to get this back 
+    when you return to courthouse so that you can file it with your name change application.
 </p>
 
 <h4><a href="https://www.nccourts.gov/assets/documents/forms/sp607.pdf?VersionId=yX3uPm253usQheBICFyrmKcvdWWNJNA." target="_blank" rel="noopener noreferrer">
@@ -45,7 +47,7 @@
     </ul>
     If you don't feel comfortable mentioning your transness as your reason for changing your name (I didn't),
     you can say something to the effect of your "new" name being how people gernally refer to you
-    and that you would like you legal documentation to match (which is true). From what I have read, as long as your are not 
+    and that you would like you legal documentation to match (which is true). From what I have read, as long as you're are not 
     changing your name to commit fraud, they are pretty accepting of your resoning.
 </p>
 <br><br><br>
