--- a/pages/IDDocuments.html
+++ b/pages/IDDocuments.html
@@ -2,50 +2,55 @@
     ID Documents
 </h2>
 <p>
-    Now that you have your court order, you need to go about updating all you ID documents.                 
+    Now that you have your court order, you need to go about updating all your ID documents.                 
 </p>
 <br>
 
 <h4><a href="https://www.ssa.gov/forms/ss-5.pdf" target="_blank" rel="noopener noreferrer">
     Social Security Card</a></h4>
 <p>
-    This was one of the easier documents to update. You can find your
-    local social security office <a href="https://secure.ssa.gov/ICON/main.jsp" target="_blank" rel="noopener noreferrer">here</a>. 
-    You will need to bring your court order.
-    You will need to do it a few days before updating your driver's license
+    This was one of the easier documents to update. Your local social security office can be found 
+     <a href="https://secure.ssa.gov/ICON/main.jsp" target="_blank" rel="noopener noreferrer">here</a>. 
+    You will need to bring your court order and the linked form. While you are updating your name, 
+    you can also change your sex marker without any other documentation. It is important to note that
+    you will need to do this at least a few days before updating your driver's license
     since the social security database is where the DMV gets their data from.
-    You can also change your sex marker without any other documentation.
+    
 </p>
 
 <h4><a href="https://travel.state.gov/content/travel/en/passports.html" target="_blank" rel="noopener noreferrer">
     US Passport</a></h4>
 <p>
-    You will need to send you court order to change your name. At the same time, you can update 
-    your gender marker without any other documentation (as of March 2024).
+    After clicking the above link, go to "Change name or correct and error" under "Get or replace a passport." From there,
+    expand the "Change your Name tab," then expand the section that applies to you and follow the directions it provides for you.
+    You will need to send your court order, your old passport, a passport photo, and a check to cover the fees (all of which should be on their website).
+    While you can take and print your own passport photo, I recommend googling to see if there are any nearby places that can take passport photos, like Walgreens or CVS.
+    While you are updating your name, you can also update your gender marker without any other documentation. 
 </p>
 
 <h4>
     Driver's license</h4>
 <p>
     You will want to make an appointment ASAP <a href="https://skiptheline.ncdot.gov/Webapp/Appointment/Index/a7ade79b-996d-4971-8766-97feb75254de" target="_blank" rel="noopener noreferrer">
-        here</a>. For the name change, you will need to bring your court order
-        proving you name change. For your sex marker change, you need to bring an updated passport with the correct information on it
-            (OR <a href="https://www.ncdot.gov/dmv/downloads/Documents/DL-300.pdf" target="_blank" rel="noopener noreferrer">this form</a> filled out, but the updated passport is much easier).
+    here</a>. For the name change, you will need to bring your court order proving you name change. For your sex marker change, 
+    you need to bring an updated passport with the correct information on it
+    (OR <a href="https://www.ncdot.gov/dmv/downloads/Documents/DL-300.pdf" target="_blank" rel="noopener noreferrer">this form</a> filled out, 
+    but the updated passport is much easier).
     </a>
 </p>
 
 <h4>Voter Registration</h4>
 <p>
-    You can do this while you are updating your driver's license.
+    You can do this while you are updating your driver's license. Assuming they don't ask you about it, just mention it at the DMV and they will handle it.
 </p>
 
 <h4><a href="https://vitalrecords.nc.gov/documents/NCOVR-BirthModificationsApplicationFinal-07072022v6.pdf" target="_blank" rel="noopener noreferrer">
     Birth Certificate</a></h4>
 <p>
-    <b>WIP<br></b>
-    You can update name and sex marker by mail with the above form, as well as with your updated passport with the correct information and your court order.
+    You can update name and sex marker by mail with the above form, as well as with your updated passport, your court order, and a form of payment (certified check or money order).
     Alternatively, you can visit them in person with your updated passport and court order 
     <a href="https://www.google.com/maps/place/225+N+McDowell+St,+Raleigh,+NC+27603/@35.7835389,-78.6467615,17z/data=!3m1!4b1!4m10!1m2!2m1!1sCooper+Memorial+Health+Building+225+N.+McDowell+St.+Raleigh,+NC+27603-1382!3m6!1s0x89ac5f6932db0ff7:0xf2b17d6fe9298809!8m2!3d35.7835346!4d-78.6418906!15sCkpDb29wZXIgTWVtb3JpYWwgSGVhbHRoIEJ1aWxkaW5nIDIyNSBOLiBNY0Rvd2VsbCBTdC4gUmFsZWlnaCwgTkMgMjc2MDMtMTM4MpIBEWNvbXBvdW5kX2J1aWxkaW5n4AEA!16s%2Fg%2F11b8v5knzg?entry=ttu" 
-    target="_blank" rel="noopener noreferrer">here</a> if you are near Raleigh.
+    target="_blank" rel="noopener noreferrer">here</a> if you are near Raleigh. If you do visit in person, you may want to print the entire form (not just the first page) since the 
+    person helping you there may not be aware that you can update sex designation with just an updated passport (as it says on page 6).
 </p>
 <br><br><br>
