minor text tweaks

--- a/pages/BackgroundChecks.html
+++ b/pages/BackgroundChecks.html
@@ -5,14 +5,16 @@
     For a name change, you will need to get a state and a federal background check,
     and you will need to get fingerprinted for each. Once you get these results back, 
     you have 90 days to file your application for a name change with the court.
+    Also, since you have not actually changed your name yet, you should be using your old name for
+    these forms.
 </p>
 <br>
 <h4><a href="https://www.fbi.gov/how-we-can-help-you/more-fbi-services-and-information/identity-history-summary-checks#Online" target="_blank" rel="noopener noreferrer">
     National Identity History Summary
 </a></h4>
 <p>
-    This is your federal background check. It is fastest to complete it on line.
-    After submitting your request, you will get instuction for how to submit you fingerprints for this background check.
+    This is your federal background check. It is fastest to complete it online.
+    After submitting your request, you will get instuction for how to submit your fingerprints for this background check.
 </p>
 <h4><a href="https://ips.usps.com/IdentityCapture/" target="_blank" rel="noopener noreferrer">
     Fingerprinting - Federal
