--- a/pages/CourtDocuments.html
+++ b/pages/CourtDocuments.html
@@ -2,13 +2,15 @@
     Court Documents
 </h2>
 <p>
-    Now that you have your background checks' results, you can actually go about changing your name. 
+    Now that you have the results from your background checks, you can actually go about changing your name. 
     These are the documents that you will actually file with the court.
     You can find your courthouse <a href="https://www.nccourts.gov/locations" target="_blank" rel="noopener noreferrer">
         here</a> on the <a href="https://www.nccourts.gov/" target="_blank" rel="noopener noreferrer">
         NC Courts website</a>.
     This is also the site where all these forms can be found
     (<a href="https://www.nccourts.gov/documents/forms?contains=name%20change&field_form_type_target_id=All&field_language_target_id=All" target="_blank" rel="noopener noreferrer">here</a>).
+    Just to note, you <i>true name</i> is your old name and your <i>name sought</i> is your new name. Unless it says otherwise, you should
+    be using your <i>true name</i> on these forms as you are still legally that name.
 </p>
 <br>
 
@@ -17,26 +19,26 @@
 </a></h4>
 <p>
     You will need to post this at courthouse at least 10 days before you submit your name change. 
-    Once there, they will give you directions for where to actually post it. You will need to get this back 
+    Once there, the clerks their will date it and give you directions for where to actually post it. You will need to get this back 
     when you return to courthouse so that you can file it with your name change application.
 </p>
 
 <h4><a href="https://www.nccourts.gov/assets/documents/forms/sp607.pdf?VersionId=yX3uPm253usQheBICFyrmKcvdWWNJNA." target="_blank" rel="noopener noreferrer">
     Affidavit of Good Character</a> (x2)</h4>
 <p>
-    You will need two people (preferably not blood relatives) from your country to fill this out,
+    You will need two people (preferably not blood relatives) from your county to fill this out,
     stating how they know you and how you are <i>of good character</i>.
 
-    As you have not yet changed your name yet, they should use your deadname when talking about you for this form. 
+    As you have not yet changed your name yet, they should use your old name when talking about you for this form. 
 </p>
 
 <h4><a href="https://www.nccourts.gov/assets/documents/forms/sp604.pdf?VersionId=GiLgvh_WFWxdYqbAUf4v.RPaeIcB24RT" target="_blank" rel="noopener noreferrer">
     Application For Adult Name Change
 </a></h4>
 <p>
-    Self Explanatory, this is the actual application for a name change.
+   This is the actual application for a name change.
     You will need to submit this with:<ul>
-        <li>You 10-day old Notice of Intent to Change Name</li>
+        <li>Your 10-day old Notice of Intent to Change Name</li>
         <li>2 Affidavit of Good Character</li>
         <li>The results of both of your background checks</li>
     </ul>
@@ -48,6 +50,6 @@
     If you don't feel comfortable mentioning your transness as your reason for changing your name (I didn't),
     you can say something to the effect of your "new" name being how people gernally refer to you
     and that you would like you legal documentation to match (which is true). From what I have read, as long as you're are not 
-    changing your name to commit fraud, they are pretty accepting of your resoning.
+    changing your name to commit fraud, the court is pretty accepting of your resoning.
 </p>
 <br><br><br>
