--- a/pages/Introduction.html
+++ b/pages/Introduction.html
@@ -8,14 +8,14 @@
     I needed to go through to find all these forms.
     <br><br>
     For context, I went through this process while legally transitioning
-    as an adult (the process is different for people under 18) and living in Wake county. 
+    as an adult (the process is different for people under 18) and living in Wake county during winter of 2024. 
     I am not a lawyer, and so I cannot give legal advice (although here are the 
     general statutes on name changes, 
     <a href="https://www.ncleg.net/enactedlegislation/statutes/html/bychapter/chapter_101.html" target="_blank" rel="noopener noreferrer">
         G.S. 101</a>, if you are interested). That said, I am
         somebody who had to stumble through this complicated process.
-        My hope is that this guide will help make this process (slightly) less complicated for you.
-        The information on this page is accurate as of March 2024.
+        My hope is that this guide will help make this process (at least slightly) less complicated for you.
+       
     <br><br>
     While you can find the various forms you need on this website, you can click the icon below to get a zip file with most of them:
 </p>
