minor text corrections

--- a/pages/BackgroundChecks.html
+++ b/pages/BackgroundChecks.html
@@ -14,7 +14,7 @@
 </a></h4>
 <p>
     This is your federal background check. It is fastest to complete it online.
-    After submitting your request, you will get instuction for how to submit your fingerprints for this background check.
+    After submitting your request, you will get instructions for how to submit your fingerprints for this background check.
 </p>
 <h4><a href="https://ips.usps.com/IdentityCapture/" target="_blank" rel="noopener noreferrer">
     Fingerprinting - Federal
@@ -32,7 +32,7 @@
     Fingerprinting - State
 </h4>
 <p>
-    You will need to find this on your own (sorry) as it varies be county 
+    You will need to find this on your own (sorry) as it varies by county 
     (but if you are in Wake county, you can get fingerprinted <a href="https://www.wake.gov/departments-government/city-county-bureau-identification-ccbi/fingerprinting-and-public-services" target="_blank" rel="noopener noreferrer">here</a>).
     You should get a fingerprint card from here that you will need to send with your Right to Review request.
     
@@ -43,6 +43,7 @@
 <p>
     This is your request for a state background check 
     (found <a href="https://ncsbi.gov/Services/Background-Checks/Personal-Review" target="_blank" rel="noopener noreferrer">here</a>). 
-    You will need to mail this with with your fingerprint card and either a certified check or money order <i>after</i> you get your National Identity History Summary results back.
+    You will need to mail this with your fingerprint card and either a certified check or money 
+    order <i>after</i> you get your National Identity History Summary results back.
 </p>
 <br><br><br>
