--- a/pages/CourtDocuments.html
+++ b/pages/CourtDocuments.html
@@ -9,7 +9,7 @@
         NC Courts website</a>.
     This is also the site where all these forms can be found
     (<a href="https://www.nccourts.gov/documents/forms?contains=name%20change&field_form_type_target_id=All&field_language_target_id=All" target="_blank" rel="noopener noreferrer">here</a>).
-    Just to note, you <i>true name</i> is your old name and your <i>name sought</i> is your new name. Unless it says otherwise, you should
+    Just to note, your <i>true name</i> is your old name and your <i>name sought</i> is your new name. Unless it says otherwise, you should
     be using your <i>true name</i> on these forms as you are still legally that name.
 </p>
 <br>
@@ -18,9 +18,9 @@
     Notice of Intent to Change Name
 </a></h4>
 <p>
-    You will need to post this at courthouse at least 10 days before you submit your name change. 
-    Once there, the clerks their will date it and give you directions for where to actually post it. You will need to get this back 
-    when you return to courthouse so that you can file it with your name change application.
+    You will need to post this at the courthouse at least 10 days before you submit your name change. 
+    Once there, the clerks there will date it and give you directions for where to actually post it. You will need to get this back 
+    when you return to the courthouse so that you can file it with your name change application.
 </p>
 
 <h4><a href="https://www.nccourts.gov/assets/documents/forms/sp607.pdf?VersionId=yX3uPm253usQheBICFyrmKcvdWWNJNA." target="_blank" rel="noopener noreferrer">
@@ -48,8 +48,8 @@
         <li>A form of payment for the filing fee</li>
     </ul>
     If you don't feel comfortable mentioning your transness as your reason for changing your name (I didn't),
-    you can say something to the effect of your "new" name being how people gernally refer to you
-    and that you would like you legal documentation to match (which is true). From what I have read, as long as you're are not 
-    changing your name to commit fraud, the court is pretty accepting of your resoning.
+    you can say something to the effect of your "new" name being how people generally refer to you
+    and that you would like your legal documentation to match (which is true). From what I have read, as long as you're not 
+    changing your name to commit fraud, the court is pretty accepting of your reasoning.
 </p>
 <br><br><br>
