--- a/pages/IDDocuments.html
+++ b/pages/IDDocuments.html
@@ -23,8 +23,8 @@
     US Passport</a></h4>
 <p>
     There are a few different forms you could need depending on your situation, so I can't just link a form here. 
-    You can find which form you need be following these steps.
-    After clicking the above link, go to "Change name or correct and error" under "Get or replace a passport." From there,
+    You can find which form you need by following these steps.
+    After clicking the above link, go to "Change name or correct an error" under "Get or replace a passport." From there,
     expand the "Change your Name tab," then expand the section that applies to you and follow the directions it provides for you.
     <br><br>
     You will need to send your court order, your old passport, a new passport photo, and a check to cover the fees (all of which should be on their website).
@@ -36,7 +36,7 @@
     Driver's license</h4>
 <p>
     You will want to make an appointment ASAP <a href="https://skiptheline.ncdot.gov/Webapp/Appointment/Index/a7ade79b-996d-4971-8766-97feb75254de" target="_blank" rel="noopener noreferrer">
-    here</a>. For the name change, you will need to bring your court order proving you name change. 
+    here</a>. For the name change, you will need to bring your court order proving your name change. 
     To update your sex marker, you need to bring an updated passport with the updated information on it
     (OR <a href="https://www.ncdot.gov/dmv/downloads/Documents/DL-300.pdf" target="_blank" rel="noopener noreferrer">this form</a> filled out, 
     but the updated passport is much easier).
