added meta tags to improve site previews

--- a/index.html
+++ b/index.html
@@ -3,6 +3,27 @@
 <head>
     <title>NC Name Change Packet</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="NC Name Change Packet" />
+    <meta name="description" content="A guide for legally changing you name in North Carolina intended for transgender adults" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ncnamechangepacket.github.io/" />
+    <meta property="og:title" content="NC Name Change Packet" />
+    <meta property="og:description" content="A guide for legally changing you name in North Carolina intended for transgender adults" />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://ncnamechangepacket.github.io/" />
+    <meta property="twitter:title" content="NC Name Change Packet" />
+    <meta property="twitter:description" content="A guide for legally changing you name in North Carolina intended for transgender adults" />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+
     
 
     <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
@@ -10,6 +31,8 @@
 
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
 
 </head>
 <body>
