changing preview image to png

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="A guide for legally changing you name in North Carolina intended for transgender adults" />
 
 
-    <meta property="og:image" content="https://ncnamechangepacket.github.io/images/trans-flag-image.svg" />
+    <meta property="og:image" content="./images/trans-flag.png" />
 
 
 
@@ -26,7 +26,7 @@
     <meta property="twitter:title" content="NC Name Change Packet" />
     <meta property="twitter:description" content="A guide for legally changing you name in North Carolina intended for transgender adults" />
 
-    <meta property="twitter:image" content="https://ncnamechangepacket.github.io/images/trans-flag-image.svg" />
+    <meta property="twitter:image" content="./images/trans-flag.png" />
 
 
 
