moderate text edits

--- a/pages/BackgroundChecks.html
+++ b/pages/BackgroundChecks.html
@@ -2,10 +2,15 @@
     Background Checks
 </h2>
 <p>
-    For a name change, you will need to get a state and a federal background check,
-    and you will need to get fingerprinted for each. Once you get these results back, 
-    you have 90 days to file your application for a name change with the court.
-    Also, since you have not actually changed your name yet, you should be using your old name for
+    For a name change, you will need to get a state and 
+    a federal background check,
+    and you will need to get fingerprinted for each. 
+    Once you get these results back, 
+    you have 90 days to file your application for a name change 
+    with the court.
+    <br><br>
+    <b>Note:</b> Since you have not actually changed your 
+    name yet, you need to use your old name for
     these forms.
 </p>
 <br>
@@ -13,28 +18,43 @@
     National Identity History Summary
 </a></h4>
 <p>
-    This is your federal background check. It is fastest to complete it online.
-    After submitting your request, you will get instructions for how to submit your fingerprints for this background check.
+    This is your federal background check. 
+    It is fastest to complete it online, 
+    but you can do it by mail. After submitting your request, 
+    you will get an FBI order confirmation number and instructions 
+    for how to submit your fingerprints for this background check.
+    After sending your fingerprints, you will receive the results of 
+    your background check by either email or physical mail.
 </p>
 <h4><a href="https://ips.usps.com/IdentityCapture/" target="_blank" rel="noopener noreferrer">
     Fingerprinting - Federal
 </a></h4>
 <p>
-    Fingerprinting for federal background checks can be done at <i>some</i> post offices.
-    You will need to do this <i>after</i> requesting your National Identity History Summary,
-    as you will need your order confirmation number to register to get fingerprinted at the post office.
+    Fingerprinting for federal background checks requires a USPS 
+    post office that offers fingerprinting service 
+    (which can be found at the above link).
+    You will need to do this <i>after</i> requesting your 
+    National Identity History Summary,
+    as you will need your order FBI order confirmation 
+    number to register to get fingerprinted at the post office.
     <br><br>
-    *You can skip this step by getting a second fingerprint card while getting your fingerprints for your state
-    background check. However, you will have to mail that second fingerprint card, which will cause the federal background check
+    <b>Note:</b> You can skip this step by getting a 
+    second fingerprint card while getting your 
+    fingerprints for your state
+    background check. However, you will have to mail 
+    that second fingerprint card, which will cause 
+    the federal background check
     to take <i>much</i> longer.
 </p>
 <h4>
     Fingerprinting - State
 </h4>
 <p>
-    You will need to find this on your own (sorry) as it varies by county 
-    (but if you are in Wake county, you can get fingerprinted <a href="https://www.wake.gov/departments-government/city-county-bureau-identification-ccbi/fingerprinting-and-public-services" target="_blank" rel="noopener noreferrer">here</a>).
-    You should get a fingerprint card from here that you will need to send with your Right to Review request.
+    You will need to find this on your own (sorry) as it varies 
+    by county (if you happen to live in Wake county, you can get 
+    fingerprinted <a href="https://www.wake.gov/departments-government/city-county-bureau-identification-ccbi/fingerprinting-and-public-services" target="_blank" rel="noopener noreferrer">here</a>).
+    You should get a fingerprint card from here that you will 
+    need to send with your Right to Review request.
     
 </p>
 <h4><a href="https://ncsbi.gov/Services/SBI-Forms/SBIRight-to-Review__FILLABLE-2021.aspx" target="_blank" rel="noopener noreferrer">
@@ -43,7 +63,11 @@
 <p>
     This is your request for a state background check 
     (found <a href="https://ncsbi.gov/Services/Background-Checks/Personal-Review" target="_blank" rel="noopener noreferrer">here</a>). 
-    You will need to mail this with your fingerprint card and either a certified check or money 
-    order <i>after</i> you get your National Identity History Summary results back.
+    After you get your National Identity History Summary results 
+    back, you will need to print and mail the final page of this form
+    with your fingerprint card and either a certified check or money 
+    order <i>after</i> you get your National Identity 
+    History Summary results back. You will receive your results 
+    back by mail.
 </p>
 <br><br><br>
