--- a/pages/CourtDocuments.html
+++ b/pages/CourtDocuments.html
@@ -2,15 +2,22 @@
     Court Documents
 </h2>
 <p>
-    Now that you have the results from your background checks, you can actually go about changing your name. 
-    These are the documents that you will actually file with the court.
-    You can find your courthouse <a href="https://www.nccourts.gov/locations" target="_blank" rel="noopener noreferrer">
-        here</a> on the <a href="https://www.nccourts.gov/" target="_blank" rel="noopener noreferrer">
+    Once you have the results from your background checks, 
+    you can start the name change process, using documents
+    that you will file with your county court.
+    You can find your courthouse 
+    <a href="https://www.nccourts.gov/locations" target="_blank" rel="noopener noreferrer">
+        here</a> on the 
+        <a href="https://www.nccourts.gov/" target="_blank" rel="noopener noreferrer">
         NC Courts website</a>.
     This is also the site where all these forms can be found
     (<a href="https://www.nccourts.gov/documents/forms?contains=name%20change&field_form_type_target_id=All&field_language_target_id=All" target="_blank" rel="noopener noreferrer">here</a>).
-    Just to note, your <i>true name</i> is your old name and your <i>name sought</i> is your new name. Unless it says otherwise, you should
-    be using your <i>true name</i> on these forms as you are still legally that name.
+    <br><br>
+    <b>Note:</b> Your <i>true name</i> is your old 
+    name and your <i>name sought</i> is your new name. 
+    Unless it says otherwise, you should
+    be using your <i>true name</i> on these 
+    forms as that name is still your legal name.
 </p>
 <br>
 
@@ -18,18 +25,27 @@
     Notice of Intent to Change Name
 </a></h4>
 <p>
-    You will need to post this at the courthouse at least 10 days before you submit your name change. 
-    Once there, the clerks there will date it and give you directions for where to actually post it. You will need to get this back 
-    when you return to the courthouse so that you can file it with your name change application.
+    You will need to post this at the courthouse 
+    at least 10 days before you submit your name change. 
+    Once you're there, the clerks will date it and 
+    give you directions for where to post it. 
+    You will need to get this actual form back 
+    when you return to the courthouse so that you 
+    can file it with your name change application.
 </p>
 
 <h4><a href="https://www.nccourts.gov/assets/documents/forms/sp607.pdf?VersionId=yX3uPm253usQheBICFyrmKcvdWWNJNA." target="_blank" rel="noopener noreferrer">
     Affidavit of Good Character</a> (x2)</h4>
 <p>
-    You will need two people (preferably not blood relatives) from your county to fill this out,
-    stating how they know you and how you are <i>of good character</i>.
+    You will need to send this to two people 
+    (preferably not blood relatives) from your 
+    county and ask them to fill this out and return it to you. 
+    In it, they will need to state how they know you and how 
+    you are <i>of good character</i>.
 
-    As you have not yet changed your name yet, they should use your old name when talking about you for this form. 
+    <b>Note:</b> As you have not yet changed your name yet, 
+    be sure they know to use your old name when talking 
+    about you for this form. 
 </p>
 
 <h4><a href="https://www.nccourts.gov/assets/documents/forms/sp604.pdf?VersionId=GiLgvh_WFWxdYqbAUf4v.RPaeIcB24RT" target="_blank" rel="noopener noreferrer">
@@ -43,11 +59,11 @@
         <li>The results of both of your background checks</li>
     </ul>
     You will also need to have:<ul>
-        <li>A form of ID</li>
+        <li>A form of photo ID</li>
         <li>Your Birth Certificate</li>
         <li>A form of payment for the filing fee</li>
     </ul>
-    If you don't feel comfortable mentioning your transness as your reason for changing your name (I didn't),
+    <b>Note:</b> If you don't feel comfortable mentioning your transness as your reason for changing your name (I didn't),
     you can say something to the effect of your "new" name being how people generally refer to you
     and that you would like your legal documentation to match (which is true). From what I have read, as long as you're not 
     changing your name to commit fraud, the court is pretty accepting of your reasoning.
