--- a/pages/Introduction.html
+++ b/pages/Introduction.html
@@ -8,7 +8,7 @@
     I needed to go through to find all these forms.
     <br><br>
     For context, I went through this process while legally transitioning
-    as an adult (the process is different for people under 18) and living in Wake county during winter of 2024. 
+    as an adult (the process is different for people under 18) and living in Wake County, NC during winter of 2024. 
     I am not a lawyer, and so I cannot give legal advice (although here are the 
     general statutes on name changes, 
     <a href="https://www.ncleg.net/enactedlegislation/statutes/html/bychapter/chapter_101.html" target="_blank" rel="noopener noreferrer">
