added very simple view-counter

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     <!-- Meta Tags Generated with https://metatags.io -->
 
     
-
+    
     <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
+    <script type="text/javascript" src="js/view-counter.js"></script>
     <script type="text/javascript" src="js/buttons.js"></script>  
 
     <link rel="stylesheet" href="styles.css">
